--- a/myproject/.gitignore
+++ b/myproject/.gitignore
@@ -6,9 +6,15 @@ __pycache__/
 *$py.class
 /env
 ../Scripts
-../*
+../docs
+../docs/*
+/docs
+../img
+../img/*
+/img
 # C extensions
 *.so
+.env
 
 # Distribution / packaging
 .Python
